swagger.json and some paths updated
